--- a/dashwise/src/styles/FAQ.css
+++ b/dashwise/src/styles/FAQ.css
@@ -10,10 +10,10 @@
 }
 
 .faq-page h1 {
-  font-size: 2.8rem;
+  font-size: 1.8rem;
   font-weight: 700;
   margin-bottom: 2.5rem;
-  color: #1a202c;
+  color: #4299e1;
 }
 
 .faq-list {
