--- a/dashwise/src/styles/Navbar.css
+++ b/dashwise/src/styles/Navbar.css
@@ -35,7 +35,7 @@
   color: #111827;
 }
 
-.avatar {
+/* .avatar {
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -47,4 +47,39 @@
   font-weight: 600;
   text-transform: uppercase;
   font-size: 16px;
+} */
+
+.avatar {
+  cursor: pointer;
+  position: relative;
+  background-color: #5c6ac4;
+  color: rgb(236, 236, 236);
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
+
+.avatar-menu {
+  position: absolute;
+  top: 45px;
+  right: 0;
+  background: rgb(58, 55, 55);
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  width: 150px;
+  z-index: 999;
+}
+
+.avatar-menu div {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.avatar-menu div:hover {
+  background-color: #f0f0f0;
 }
